# nguyenhoang88502.github.io

./: CNAME  Profile Picture  README.md  index.html  portfolio.html
BKFC/: index.html  tool.html
BKFC/BKFC post/: README.txt  index.html  schedule.csv
Decisionanalysis/: index.html
OPF_sim/: AfterFitted.xlsx  Before.doe  BeforeFitted.xlsx  after.doe  archive.html  data_collection.html  index.html  temp.xlsx  tool.html
assy_sim/: data_collection.html  index.html  monte_carlo_sim  readme.md
autocad2d/: index.html
bus_sim/: index.html
co4031_project/: README.md  app.py  index.html  pyproject.toml
co4031_project/data/cleaned/: machine_data_cleaned.csv
co4031_project/data/raw/: 01_exploration.py
co4031_project/dw/: 01_create_star_schema.sql  02_populate_star.py  ETL & DW & OLAP.docx  OLAP Failure Distribution by Failure Type.csv  OLAP Failure Distribution by Failure Type.sql  OLAP Machine Condition vs Failure Rate.csv  OLAP Monthly Failure Trend.sql
co4031_project/etl/: 02 _load_to_dw.py  machine_etl.ktr  staging.sql
co4031_project/ml/: scaler.pkl  xgboost_failure_prediction.py
dashboard/: index.html  workshop.pbix
decisionanalysis/: index.html
ergonomic/: index.html
legacy_database_management/: README.md  index.html
manufacturing-failure-analytics-pipeline/: index.html  run_etl.py
manufacturing-failure-analytics-pipeline/dw/: 02_populate_star.py  OLAP Failure Rate by Product Quality Type.csv  OLAP Failure Rate by Product Quality Type.sql  (+2 more)
opf-excel-backend/: requirements.txt
pdftodocx/: index.html
systemdesign/: index.html
(+31 files in other folders)
