[project]
name = "Dashboard"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "playwright>=1.59.0",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]
